# agentic-rag-kyc

./: .gitignore  fica_guardian_kyc.ipynb  fica_guardian_kyc_v2.ipynb  fica_guardian_report.md  pyproject.toml
data/lookup/: usage.md
